parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    EQUALS
    EULER
    NAME
    PI

Grammar

Rule 0     S' -> calc
Rule 1     calc -> expression
Rule 2     calc -> empty
Rule 3     expression -> expression EXP PLUS expression
Rule 4     expression -> expression EXP MINUS expression
Rule 5     expression -> expression MULTIPLY expression
Rule 6     expression -> expression DIVIDE expression
Rule 7     expression -> expression PLUS expression
Rule 8     expression -> expression MINUS expression
Rule 9     expression -> expression EXP expression
Rule 10    expression -> expression UP expression
Rule 11    expression -> OPEN expression CLOSE
Rule 12    expression -> expression FACTORIAL
Rule 13    expression -> SIN OPEN expression CLOSE
Rule 14    expression -> COS OPEN expression CLOSE
Rule 15    expression -> TAN OPEN expression CLOSE
Rule 16    expression -> NATURAL OPEN expression CLOSE
Rule 17    expression -> SQUARE OPEN expression CLOSE
Rule 18    expression -> LOG expression OPEN expression CLOSE
Rule 19    expression -> INT
Rule 20    expression -> FLOAT
Rule 21    empty -> <empty>

Terminals, with rules where they appear

CLOSE                : 11 13 14 15 16 17 18
COS                  : 14
DIVIDE               : 6
EQUALS               : 
EULER                : 
EXP                  : 3 4 9
FACTORIAL            : 12
FLOAT                : 20
INT                  : 19
LOG                  : 18
MINUS                : 4 8
MULTIPLY             : 5
NAME                 : 
NATURAL              : 16
OPEN                 : 11 13 14 15 16 17 18
PI                   : 
PLUS                 : 3 7
SIN                  : 13
SQUARE               : 17
TAN                  : 15
UP                   : 10
error                : 

Nonterminals, with rules where they appear

calc                 : 0
empty                : 2
expression           : 1 3 3 4 4 5 5 6 6 7 7 8 8 9 9 10 10 11 12 13 14 15 16 17 18 18

Parsing method: LALR

state 0

    (0) S' -> . calc
    (1) calc -> . expression
    (2) calc -> . empty
    (3) expression -> . expression EXP PLUS expression
    (4) expression -> . expression EXP MINUS expression
    (5) expression -> . expression MULTIPLY expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression EXP expression
    (10) expression -> . expression UP expression
    (11) expression -> . OPEN expression CLOSE
    (12) expression -> . expression FACTORIAL
    (13) expression -> . SIN OPEN expression CLOSE
    (14) expression -> . COS OPEN expression CLOSE
    (15) expression -> . TAN OPEN expression CLOSE
    (16) expression -> . NATURAL OPEN expression CLOSE
    (17) expression -> . SQUARE OPEN expression CLOSE
    (18) expression -> . LOG expression OPEN expression CLOSE
    (19) expression -> . INT
    (20) expression -> . FLOAT
    (21) empty -> .

    OPEN            shift and go to state 4
    SIN             shift and go to state 5
    COS             shift and go to state 6
    TAN             shift and go to state 7
    NATURAL         shift and go to state 8
    SQUARE          shift and go to state 9
    LOG             shift and go to state 10
    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    $end            reduce using rule 21 (empty -> .)

    calc                           shift and go to state 1
    expression                     shift and go to state 2
    empty                          shift and go to state 3

state 1

    (0) S' -> calc .



state 2

    (1) calc -> expression .
    (3) expression -> expression . EXP PLUS expression
    (4) expression -> expression . EXP MINUS expression
    (5) expression -> expression . MULTIPLY expression
    (6) expression -> expression . DIVIDE expression
    (7) expression -> expression . PLUS expression
    (8) expression -> expression . MINUS expression
    (9) expression -> expression . EXP expression
    (10) expression -> expression . UP expression
    (12) expression -> expression . FACTORIAL

    $end            reduce using rule 1 (calc -> expression .)
    EXP             shift and go to state 13
    MULTIPLY        shift and go to state 16
    DIVIDE          shift and go to state 17
    PLUS            shift and go to state 14
    MINUS           shift and go to state 15
    UP              shift and go to state 18
    FACTORIAL       shift and go to state 19


state 3

    (2) calc -> empty .

    $end            reduce using rule 2 (calc -> empty .)


state 4

    (11) expression -> OPEN . expression CLOSE
    (3) expression -> . expression EXP PLUS expression
    (4) expression -> . expression EXP MINUS expression
    (5) expression -> . expression MULTIPLY expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression EXP expression
    (10) expression -> . expression UP expression
    (11) expression -> . OPEN expression CLOSE
    (12) expression -> . expression FACTORIAL
    (13) expression -> . SIN OPEN expression CLOSE
    (14) expression -> . COS OPEN expression CLOSE
    (15) expression -> . TAN OPEN expression CLOSE
    (16) expression -> . NATURAL OPEN expression CLOSE
    (17) expression -> . SQUARE OPEN expression CLOSE
    (18) expression -> . LOG expression OPEN expression CLOSE
    (19) expression -> . INT
    (20) expression -> . FLOAT

    OPEN            shift and go to state 4
    SIN             shift and go to state 5
    COS             shift and go to state 6
    TAN             shift and go to state 7
    NATURAL         shift and go to state 8
    SQUARE          shift and go to state 9
    LOG             shift and go to state 10
    INT             shift and go to state 11
    FLOAT           shift and go to state 12

    expression                     shift and go to state 20

state 5

    (13) expression -> SIN . OPEN expression CLOSE

    OPEN            shift and go to state 21


state 6

    (14) expression -> COS . OPEN expression CLOSE

    OPEN            shift and go to state 22


state 7

    (15) expression -> TAN . OPEN expression CLOSE

    OPEN            shift and go to state 23


state 8

    (16) expression -> NATURAL . OPEN expression CLOSE

    OPEN            shift and go to state 24


state 9

    (17) expression -> SQUARE . OPEN expression CLOSE

    OPEN            shift and go to state 25


state 10

    (18) expression -> LOG . expression OPEN expression CLOSE
    (3) expression -> . expression EXP PLUS expression
    (4) expression -> . expression EXP MINUS expression
    (5) expression -> . expression MULTIPLY expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression EXP expression
    (10) expression -> . expression UP expression
    (11) expression -> . OPEN expression CLOSE
    (12) expression -> . expression FACTORIAL
    (13) expression -> . SIN OPEN expression CLOSE
    (14) expression -> . COS OPEN expression CLOSE
    (15) expression -> . TAN OPEN expression CLOSE
    (16) expression -> . NATURAL OPEN expression CLOSE
    (17) expression -> . SQUARE OPEN expression CLOSE
    (18) expression -> . LOG expression OPEN expression CLOSE
    (19) expression -> . INT
    (20) expression -> . FLOAT

    OPEN            shift and go to state 4
    SIN             shift and go to state 5
    COS             shift and go to state 6
    TAN             shift and go to state 7
    NATURAL         shift and go to state 8
    SQUARE          shift and go to state 9
    LOG             shift and go to state 10
    INT             shift and go to state 11
    FLOAT           shift and go to state 12

    expression                     shift and go to state 26

state 11

    (19) expression -> INT .

    EXP             reduce using rule 19 (expression -> INT .)
    MULTIPLY        reduce using rule 19 (expression -> INT .)
    DIVIDE          reduce using rule 19 (expression -> INT .)
    PLUS            reduce using rule 19 (expression -> INT .)
    MINUS           reduce using rule 19 (expression -> INT .)
    UP              reduce using rule 19 (expression -> INT .)
    FACTORIAL       reduce using rule 19 (expression -> INT .)
    $end            reduce using rule 19 (expression -> INT .)
    CLOSE           reduce using rule 19 (expression -> INT .)
    OPEN            reduce using rule 19 (expression -> INT .)


state 12

    (20) expression -> FLOAT .

    EXP             reduce using rule 20 (expression -> FLOAT .)
    MULTIPLY        reduce using rule 20 (expression -> FLOAT .)
    DIVIDE          reduce using rule 20 (expression -> FLOAT .)
    PLUS            reduce using rule 20 (expression -> FLOAT .)
    MINUS           reduce using rule 20 (expression -> FLOAT .)
    UP              reduce using rule 20 (expression -> FLOAT .)
    FACTORIAL       reduce using rule 20 (expression -> FLOAT .)
    $end            reduce using rule 20 (expression -> FLOAT .)
    CLOSE           reduce using rule 20 (expression -> FLOAT .)
    OPEN            reduce using rule 20 (expression -> FLOAT .)


state 13

    (3) expression -> expression EXP . PLUS expression
    (4) expression -> expression EXP . MINUS expression
    (9) expression -> expression EXP . expression
    (3) expression -> . expression EXP PLUS expression
    (4) expression -> . expression EXP MINUS expression
    (5) expression -> . expression MULTIPLY expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression EXP expression
    (10) expression -> . expression UP expression
    (11) expression -> . OPEN expression CLOSE
    (12) expression -> . expression FACTORIAL
    (13) expression -> . SIN OPEN expression CLOSE
    (14) expression -> . COS OPEN expression CLOSE
    (15) expression -> . TAN OPEN expression CLOSE
    (16) expression -> . NATURAL OPEN expression CLOSE
    (17) expression -> . SQUARE OPEN expression CLOSE
    (18) expression -> . LOG expression OPEN expression CLOSE
    (19) expression -> . INT
    (20) expression -> . FLOAT

    PLUS            shift and go to state 28
    MINUS           shift and go to state 29
    OPEN            shift and go to state 4
    SIN             shift and go to state 5
    COS             shift and go to state 6
    TAN             shift and go to state 7
    NATURAL         shift and go to state 8
    SQUARE          shift and go to state 9
    LOG             shift and go to state 10
    INT             shift and go to state 11
    FLOAT           shift and go to state 12

    expression                     shift and go to state 27

state 14

    (7) expression -> expression PLUS . expression
    (3) expression -> . expression EXP PLUS expression
    (4) expression -> . expression EXP MINUS expression
    (5) expression -> . expression MULTIPLY expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression EXP expression
    (10) expression -> . expression UP expression
    (11) expression -> . OPEN expression CLOSE
    (12) expression -> . expression FACTORIAL
    (13) expression -> . SIN OPEN expression CLOSE
    (14) expression -> . COS OPEN expression CLOSE
    (15) expression -> . TAN OPEN expression CLOSE
    (16) expression -> . NATURAL OPEN expression CLOSE
    (17) expression -> . SQUARE OPEN expression CLOSE
    (18) expression -> . LOG expression OPEN expression CLOSE
    (19) expression -> . INT
    (20) expression -> . FLOAT

    OPEN            shift and go to state 4
    SIN             shift and go to state 5
    COS             shift and go to state 6
    TAN             shift and go to state 7
    NATURAL         shift and go to state 8
    SQUARE          shift and go to state 9
    LOG             shift and go to state 10
    INT             shift and go to state 11
    FLOAT           shift and go to state 12

    expression                     shift and go to state 30

state 15

    (8) expression -> expression MINUS . expression
    (3) expression -> . expression EXP PLUS expression
    (4) expression -> . expression EXP MINUS expression
    (5) expression -> . expression MULTIPLY expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression EXP expression
    (10) expression -> . expression UP expression
    (11) expression -> . OPEN expression CLOSE
    (12) expression -> . expression FACTORIAL
    (13) expression -> . SIN OPEN expression CLOSE
    (14) expression -> . COS OPEN expression CLOSE
    (15) expression -> . TAN OPEN expression CLOSE
    (16) expression -> . NATURAL OPEN expression CLOSE
    (17) expression -> . SQUARE OPEN expression CLOSE
    (18) expression -> . LOG expression OPEN expression CLOSE
    (19) expression -> . INT
    (20) expression -> . FLOAT

    OPEN            shift and go to state 4
    SIN             shift and go to state 5
    COS             shift and go to state 6
    TAN             shift and go to state 7
    NATURAL         shift and go to state 8
    SQUARE          shift and go to state 9
    LOG             shift and go to state 10
    INT             shift and go to state 11
    FLOAT           shift and go to state 12

    expression                     shift and go to state 31

state 16

    (5) expression -> expression MULTIPLY . expression
    (3) expression -> . expression EXP PLUS expression
    (4) expression -> . expression EXP MINUS expression
    (5) expression -> . expression MULTIPLY expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression EXP expression
    (10) expression -> . expression UP expression
    (11) expression -> . OPEN expression CLOSE
    (12) expression -> . expression FACTORIAL
    (13) expression -> . SIN OPEN expression CLOSE
    (14) expression -> . COS OPEN expression CLOSE
    (15) expression -> . TAN OPEN expression CLOSE
    (16) expression -> . NATURAL OPEN expression CLOSE
    (17) expression -> . SQUARE OPEN expression CLOSE
    (18) expression -> . LOG expression OPEN expression CLOSE
    (19) expression -> . INT
    (20) expression -> . FLOAT

    OPEN            shift and go to state 4
    SIN             shift and go to state 5
    COS             shift and go to state 6
    TAN             shift and go to state 7
    NATURAL         shift and go to state 8
    SQUARE          shift and go to state 9
    LOG             shift and go to state 10
    INT             shift and go to state 11
    FLOAT           shift and go to state 12

    expression                     shift and go to state 32

state 17

    (6) expression -> expression DIVIDE . expression
    (3) expression -> . expression EXP PLUS expression
    (4) expression -> . expression EXP MINUS expression
    (5) expression -> . expression MULTIPLY expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression EXP expression
    (10) expression -> . expression UP expression
    (11) expression -> . OPEN expression CLOSE
    (12) expression -> . expression FACTORIAL
    (13) expression -> . SIN OPEN expression CLOSE
    (14) expression -> . COS OPEN expression CLOSE
    (15) expression -> . TAN OPEN expression CLOSE
    (16) expression -> . NATURAL OPEN expression CLOSE
    (17) expression -> . SQUARE OPEN expression CLOSE
    (18) expression -> . LOG expression OPEN expression CLOSE
    (19) expression -> . INT
    (20) expression -> . FLOAT

    OPEN            shift and go to state 4
    SIN             shift and go to state 5
    COS             shift and go to state 6
    TAN             shift and go to state 7
    NATURAL         shift and go to state 8
    SQUARE          shift and go to state 9
    LOG             shift and go to state 10
    INT             shift and go to state 11
    FLOAT           shift and go to state 12

    expression                     shift and go to state 33

state 18

    (10) expression -> expression UP . expression
    (3) expression -> . expression EXP PLUS expression
    (4) expression -> . expression EXP MINUS expression
    (5) expression -> . expression MULTIPLY expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression EXP expression
    (10) expression -> . expression UP expression
    (11) expression -> . OPEN expression CLOSE
    (12) expression -> . expression FACTORIAL
    (13) expression -> . SIN OPEN expression CLOSE
    (14) expression -> . COS OPEN expression CLOSE
    (15) expression -> . TAN OPEN expression CLOSE
    (16) expression -> . NATURAL OPEN expression CLOSE
    (17) expression -> . SQUARE OPEN expression CLOSE
    (18) expression -> . LOG expression OPEN expression CLOSE
    (19) expression -> . INT
    (20) expression -> . FLOAT

    OPEN            shift and go to state 4
    SIN             shift and go to state 5
    COS             shift and go to state 6
    TAN             shift and go to state 7
    NATURAL         shift and go to state 8
    SQUARE          shift and go to state 9
    LOG             shift and go to state 10
    INT             shift and go to state 11
    FLOAT           shift and go to state 12

    expression                     shift and go to state 34

state 19

    (12) expression -> expression FACTORIAL .

    EXP             reduce using rule 12 (expression -> expression FACTORIAL .)
    MULTIPLY        reduce using rule 12 (expression -> expression FACTORIAL .)
    DIVIDE          reduce using rule 12 (expression -> expression FACTORIAL .)
    PLUS            reduce using rule 12 (expression -> expression FACTORIAL .)
    MINUS           reduce using rule 12 (expression -> expression FACTORIAL .)
    UP              reduce using rule 12 (expression -> expression FACTORIAL .)
    FACTORIAL       reduce using rule 12 (expression -> expression FACTORIAL .)
    $end            reduce using rule 12 (expression -> expression FACTORIAL .)
    CLOSE           reduce using rule 12 (expression -> expression FACTORIAL .)
    OPEN            reduce using rule 12 (expression -> expression FACTORIAL .)


state 20

    (11) expression -> OPEN expression . CLOSE
    (3) expression -> expression . EXP PLUS expression
    (4) expression -> expression . EXP MINUS expression
    (5) expression -> expression . MULTIPLY expression
    (6) expression -> expression . DIVIDE expression
    (7) expression -> expression . PLUS expression
    (8) expression -> expression . MINUS expression
    (9) expression -> expression . EXP expression
    (10) expression -> expression . UP expression
    (12) expression -> expression . FACTORIAL

    CLOSE           shift and go to state 35
    EXP             shift and go to state 13
    MULTIPLY        shift and go to state 16
    DIVIDE          shift and go to state 17
    PLUS            shift and go to state 14
    MINUS           shift and go to state 15
    UP              shift and go to state 18
    FACTORIAL       shift and go to state 19


state 21

    (13) expression -> SIN OPEN . expression CLOSE
    (3) expression -> . expression EXP PLUS expression
    (4) expression -> . expression EXP MINUS expression
    (5) expression -> . expression MULTIPLY expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression EXP expression
    (10) expression -> . expression UP expression
    (11) expression -> . OPEN expression CLOSE
    (12) expression -> . expression FACTORIAL
    (13) expression -> . SIN OPEN expression CLOSE
    (14) expression -> . COS OPEN expression CLOSE
    (15) expression -> . TAN OPEN expression CLOSE
    (16) expression -> . NATURAL OPEN expression CLOSE
    (17) expression -> . SQUARE OPEN expression CLOSE
    (18) expression -> . LOG expression OPEN expression CLOSE
    (19) expression -> . INT
    (20) expression -> . FLOAT

    OPEN            shift and go to state 4
    SIN             shift and go to state 5
    COS             shift and go to state 6
    TAN             shift and go to state 7
    NATURAL         shift and go to state 8
    SQUARE          shift and go to state 9
    LOG             shift and go to state 10
    INT             shift and go to state 11
    FLOAT           shift and go to state 12

    expression                     shift and go to state 36

state 22

    (14) expression -> COS OPEN . expression CLOSE
    (3) expression -> . expression EXP PLUS expression
    (4) expression -> . expression EXP MINUS expression
    (5) expression -> . expression MULTIPLY expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression EXP expression
    (10) expression -> . expression UP expression
    (11) expression -> . OPEN expression CLOSE
    (12) expression -> . expression FACTORIAL
    (13) expression -> . SIN OPEN expression CLOSE
    (14) expression -> . COS OPEN expression CLOSE
    (15) expression -> . TAN OPEN expression CLOSE
    (16) expression -> . NATURAL OPEN expression CLOSE
    (17) expression -> . SQUARE OPEN expression CLOSE
    (18) expression -> . LOG expression OPEN expression CLOSE
    (19) expression -> . INT
    (20) expression -> . FLOAT

    OPEN            shift and go to state 4
    SIN             shift and go to state 5
    COS             shift and go to state 6
    TAN             shift and go to state 7
    NATURAL         shift and go to state 8
    SQUARE          shift and go to state 9
    LOG             shift and go to state 10
    INT             shift and go to state 11
    FLOAT           shift and go to state 12

    expression                     shift and go to state 37

state 23

    (15) expression -> TAN OPEN . expression CLOSE
    (3) expression -> . expression EXP PLUS expression
    (4) expression -> . expression EXP MINUS expression
    (5) expression -> . expression MULTIPLY expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression EXP expression
    (10) expression -> . expression UP expression
    (11) expression -> . OPEN expression CLOSE
    (12) expression -> . expression FACTORIAL
    (13) expression -> . SIN OPEN expression CLOSE
    (14) expression -> . COS OPEN expression CLOSE
    (15) expression -> . TAN OPEN expression CLOSE
    (16) expression -> . NATURAL OPEN expression CLOSE
    (17) expression -> . SQUARE OPEN expression CLOSE
    (18) expression -> . LOG expression OPEN expression CLOSE
    (19) expression -> . INT
    (20) expression -> . FLOAT

    OPEN            shift and go to state 4
    SIN             shift and go to state 5
    COS             shift and go to state 6
    TAN             shift and go to state 7
    NATURAL         shift and go to state 8
    SQUARE          shift and go to state 9
    LOG             shift and go to state 10
    INT             shift and go to state 11
    FLOAT           shift and go to state 12

    expression                     shift and go to state 38

state 24

    (16) expression -> NATURAL OPEN . expression CLOSE
    (3) expression -> . expression EXP PLUS expression
    (4) expression -> . expression EXP MINUS expression
    (5) expression -> . expression MULTIPLY expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression EXP expression
    (10) expression -> . expression UP expression
    (11) expression -> . OPEN expression CLOSE
    (12) expression -> . expression FACTORIAL
    (13) expression -> . SIN OPEN expression CLOSE
    (14) expression -> . COS OPEN expression CLOSE
    (15) expression -> . TAN OPEN expression CLOSE
    (16) expression -> . NATURAL OPEN expression CLOSE
    (17) expression -> . SQUARE OPEN expression CLOSE
    (18) expression -> . LOG expression OPEN expression CLOSE
    (19) expression -> . INT
    (20) expression -> . FLOAT

    OPEN            shift and go to state 4
    SIN             shift and go to state 5
    COS             shift and go to state 6
    TAN             shift and go to state 7
    NATURAL         shift and go to state 8
    SQUARE          shift and go to state 9
    LOG             shift and go to state 10
    INT             shift and go to state 11
    FLOAT           shift and go to state 12

    expression                     shift and go to state 39

state 25

    (17) expression -> SQUARE OPEN . expression CLOSE
    (3) expression -> . expression EXP PLUS expression
    (4) expression -> . expression EXP MINUS expression
    (5) expression -> . expression MULTIPLY expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression EXP expression
    (10) expression -> . expression UP expression
    (11) expression -> . OPEN expression CLOSE
    (12) expression -> . expression FACTORIAL
    (13) expression -> . SIN OPEN expression CLOSE
    (14) expression -> . COS OPEN expression CLOSE
    (15) expression -> . TAN OPEN expression CLOSE
    (16) expression -> . NATURAL OPEN expression CLOSE
    (17) expression -> . SQUARE OPEN expression CLOSE
    (18) expression -> . LOG expression OPEN expression CLOSE
    (19) expression -> . INT
    (20) expression -> . FLOAT

    OPEN            shift and go to state 4
    SIN             shift and go to state 5
    COS             shift and go to state 6
    TAN             shift and go to state 7
    NATURAL         shift and go to state 8
    SQUARE          shift and go to state 9
    LOG             shift and go to state 10
    INT             shift and go to state 11
    FLOAT           shift and go to state 12

    expression                     shift and go to state 40

state 26

    (18) expression -> LOG expression . OPEN expression CLOSE
    (3) expression -> expression . EXP PLUS expression
    (4) expression -> expression . EXP MINUS expression
    (5) expression -> expression . MULTIPLY expression
    (6) expression -> expression . DIVIDE expression
    (7) expression -> expression . PLUS expression
    (8) expression -> expression . MINUS expression
    (9) expression -> expression . EXP expression
    (10) expression -> expression . UP expression
    (12) expression -> expression . FACTORIAL

    OPEN            shift and go to state 41
    EXP             shift and go to state 13
    MULTIPLY        shift and go to state 16
    DIVIDE          shift and go to state 17
    PLUS            shift and go to state 14
    MINUS           shift and go to state 15
    UP              shift and go to state 18
    FACTORIAL       shift and go to state 19


state 27

    (9) expression -> expression EXP expression .
    (3) expression -> expression . EXP PLUS expression
    (4) expression -> expression . EXP MINUS expression
    (5) expression -> expression . MULTIPLY expression
    (6) expression -> expression . DIVIDE expression
    (7) expression -> expression . PLUS expression
    (8) expression -> expression . MINUS expression
    (9) expression -> expression . EXP expression
    (10) expression -> expression . UP expression
    (12) expression -> expression . FACTORIAL

  ! shift/reduce conflict for EXP resolved as shift
  ! shift/reduce conflict for MULTIPLY resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for UP resolved as shift
  ! shift/reduce conflict for FACTORIAL resolved as shift
    $end            reduce using rule 9 (expression -> expression EXP expression .)
    CLOSE           reduce using rule 9 (expression -> expression EXP expression .)
    OPEN            reduce using rule 9 (expression -> expression EXP expression .)
    EXP             shift and go to state 13
    MULTIPLY        shift and go to state 16
    DIVIDE          shift and go to state 17
    PLUS            shift and go to state 14
    MINUS           shift and go to state 15
    UP              shift and go to state 18
    FACTORIAL       shift and go to state 19

  ! EXP             [ reduce using rule 9 (expression -> expression EXP expression .) ]
  ! MULTIPLY        [ reduce using rule 9 (expression -> expression EXP expression .) ]
  ! DIVIDE          [ reduce using rule 9 (expression -> expression EXP expression .) ]
  ! PLUS            [ reduce using rule 9 (expression -> expression EXP expression .) ]
  ! MINUS           [ reduce using rule 9 (expression -> expression EXP expression .) ]
  ! UP              [ reduce using rule 9 (expression -> expression EXP expression .) ]
  ! FACTORIAL       [ reduce using rule 9 (expression -> expression EXP expression .) ]


state 28

    (3) expression -> expression EXP PLUS . expression
    (3) expression -> . expression EXP PLUS expression
    (4) expression -> . expression EXP MINUS expression
    (5) expression -> . expression MULTIPLY expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression EXP expression
    (10) expression -> . expression UP expression
    (11) expression -> . OPEN expression CLOSE
    (12) expression -> . expression FACTORIAL
    (13) expression -> . SIN OPEN expression CLOSE
    (14) expression -> . COS OPEN expression CLOSE
    (15) expression -> . TAN OPEN expression CLOSE
    (16) expression -> . NATURAL OPEN expression CLOSE
    (17) expression -> . SQUARE OPEN expression CLOSE
    (18) expression -> . LOG expression OPEN expression CLOSE
    (19) expression -> . INT
    (20) expression -> . FLOAT

    OPEN            shift and go to state 4
    SIN             shift and go to state 5
    COS             shift and go to state 6
    TAN             shift and go to state 7
    NATURAL         shift and go to state 8
    SQUARE          shift and go to state 9
    LOG             shift and go to state 10
    INT             shift and go to state 11
    FLOAT           shift and go to state 12

    expression                     shift and go to state 42

state 29

    (4) expression -> expression EXP MINUS . expression
    (3) expression -> . expression EXP PLUS expression
    (4) expression -> . expression EXP MINUS expression
    (5) expression -> . expression MULTIPLY expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression EXP expression
    (10) expression -> . expression UP expression
    (11) expression -> . OPEN expression CLOSE
    (12) expression -> . expression FACTORIAL
    (13) expression -> . SIN OPEN expression CLOSE
    (14) expression -> . COS OPEN expression CLOSE
    (15) expression -> . TAN OPEN expression CLOSE
    (16) expression -> . NATURAL OPEN expression CLOSE
    (17) expression -> . SQUARE OPEN expression CLOSE
    (18) expression -> . LOG expression OPEN expression CLOSE
    (19) expression -> . INT
    (20) expression -> . FLOAT

    OPEN            shift and go to state 4
    SIN             shift and go to state 5
    COS             shift and go to state 6
    TAN             shift and go to state 7
    NATURAL         shift and go to state 8
    SQUARE          shift and go to state 9
    LOG             shift and go to state 10
    INT             shift and go to state 11
    FLOAT           shift and go to state 12

    expression                     shift and go to state 43

state 30

    (7) expression -> expression PLUS expression .
    (3) expression -> expression . EXP PLUS expression
    (4) expression -> expression . EXP MINUS expression
    (5) expression -> expression . MULTIPLY expression
    (6) expression -> expression . DIVIDE expression
    (7) expression -> expression . PLUS expression
    (8) expression -> expression . MINUS expression
    (9) expression -> expression . EXP expression
    (10) expression -> expression . UP expression
    (12) expression -> expression . FACTORIAL

    EXP             reduce using rule 7 (expression -> expression PLUS expression .)
    PLUS            reduce using rule 7 (expression -> expression PLUS expression .)
    MINUS           reduce using rule 7 (expression -> expression PLUS expression .)
    UP              reduce using rule 7 (expression -> expression PLUS expression .)
    FACTORIAL       reduce using rule 7 (expression -> expression PLUS expression .)
    $end            reduce using rule 7 (expression -> expression PLUS expression .)
    CLOSE           reduce using rule 7 (expression -> expression PLUS expression .)
    OPEN            reduce using rule 7 (expression -> expression PLUS expression .)
    MULTIPLY        shift and go to state 16
    DIVIDE          shift and go to state 17

  ! MULTIPLY        [ reduce using rule 7 (expression -> expression PLUS expression .) ]
  ! DIVIDE          [ reduce using rule 7 (expression -> expression PLUS expression .) ]
